--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
+    "chart.js": "^4.4.8",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.9"
+    "shadcn-ui": "^0.9.5",
+    "tailwindcss": "^4.0.9",
+    "ui-button": "^2.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
