--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
+    "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.5",
     "tailwindcss": "^4.0.9",
+    "tailwindcss-animate": "^1.0.7",
     "ui-button": "^2.1.12"
   },
   "devDependencies": {
